--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-'# Welcome to Beautiful Jekyll!
+# Welcome to Beautiful Jekyll!
 # This config file is meant for settings that affect your entire website. When you first
 # set up your website you should go through all these settings and edit them, but after
 # the initial set up you won't need to come back to this file often.
@@ -13,7 +13,6 @@ author: David Harrison
 
 # --- List of links in the navigation bar --- #
 
-# List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
   Resources:
